CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(chromium)

SET(CMAKE_INSTALL_PREFIX /usr)
SET(PREFIX ${CMAKE_INSTALL_PREFIX})

SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/cmake_build_tmp/output)
set(MODULE_DIR ${CMAKE_SOURCE_DIR})

SET (${PROJECT_NAME}_SOURCE_FILES
	${MODULE_DIR}/base/pickle.cc
	${MODULE_DIR}/ipc/ipc_message.cc
	${MODULE_DIR}/ipc/ipc_message_utils.cc
	${MODULE_DIR}/ipc/ipc_sync_message.cc
	)

LIST (APPEND SRCS ${${PROJECT_NAME}_SOURCE_FILES})

INCLUDE_DIRECTORIES(
	${MODULE_DIR}
) 

add_library(${PROJECT_NAME} SHARED ${SRCS})

#FIND_LIBRARY(MYAPILIB NAMES pthread PATHS /usr/lib) 

SET(CMAKE_C_FLAGS "${OSP_DEBUG_FLAGS} ${OSP_OPT_FLAGS} ${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} ${OSP_COMPILER_FLAGS}")
SET(CMAKE_CXX_FLAGS "${OSP_DEBUG_FLAGS} ${OSP_OPT_FLAGS} ${CMAKE_CXX_FLAGS} ${EXTRA_CFLAGS} ${OSP_COMPILER_FLAGS}")


SET_TARGET_PROPERTIES(${PROJECT_NAME} 
	PROPERTIES 
	VERSION ${FULLVER}
	SOVERSION ${MAJORVER}
	CLEAN_DIRECT_OUTPUT 1
	)

SET(PC_NAME ${PROJECT_NAME})
SET(PC_REQUIRED ${pc_requires})
SET(PC_LDFLAGS -l${PROJECT_NAME})

CONFIGURE_FILE(
    chromium.pc.in
    ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}.pc
    @ONLY
)

INSTALL(FILES ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}.pc DESTINATION lib${LIB_SUFFIX}/pkgconfig)
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib${LIB_SUFFIX})
INSTALL(FILES ${CMAKE_SOURCE_DIR}/log.h DESTINATION include/${PROJECT_NAME})
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/atomic_ref_count.h DESTINATION include/${PROJECT_NAME}/base)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/atomicops.h DESTINATION include/${PROJECT_NAME}/base)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/atomicops_internals_arm_gcc.h DESTINATION include/${PROJECT_NAME}/base)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/atomicops_internals_atomicword_compat.h DESTINATION include/${PROJECT_NAME}/base)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/atomicops_internals_x86_gcc.h DESTINATION include/${PROJECT_NAME}/base)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/atomicops_internals_x86_macosx.h DESTINATION include/${PROJECT_NAME}/base)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/atomicops_internals_x86_msvc.h DESTINATION include/${PROJECT_NAME}/base)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/basictypes.h DESTINATION include/${PROJECT_NAME}/base)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/base_export.h DESTINATION include/${PROJECT_NAME}/base)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/compiler_specific.h DESTINATION include/${PROJECT_NAME}/base)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/file_descriptor_posix.h DESTINATION include/${PROJECT_NAME}/base)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/memory/ref_counted.h DESTINATION include/${PROJECT_NAME}/base/memory)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/third_party/dynamic_annotations/dynamic_annotations.h DESTINATION include/${PROJECT_NAME}/base/third_party/dynamic_annotations)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/threading/thread_collision_warner.h DESTINATION include/${PROJECT_NAME}/base/threading)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/hash_tables.h DESTINATION include/${PROJECT_NAME}/base)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/logging.h DESTINATION include/${PROJECT_NAME}/base)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/pickle.h DESTINATION include/${PROJECT_NAME}/base)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/port.h DESTINATION include/${PROJECT_NAME}/base)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/string16.h DESTINATION include/${PROJECT_NAME}/base)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/string_number_conversions.h DESTINATION include/${PROJECT_NAME}/base)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/string_piece.h DESTINATION include/${PROJECT_NAME}/base)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/time.h DESTINATION include/${PROJECT_NAME}/base)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/tuple.h DESTINATION include/${PROJECT_NAME}/base)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/base/values.h DESTINATION include/${PROJECT_NAME}/base)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/build/build_config.h DESTINATION include/${PROJECT_NAME}/build)
INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/ipc/ DESTINATION include/${PROJECT_NAME}/ipc FILES_MATCHING PATTERN "*.h")
